--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && tsc -p tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "release-it": "^15.10.3",
     "typescript": "^5.0.4"
   }
 }
