--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,12 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
+    "target": "ES2017",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
