--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "index.d.ts"
   ],
   "scripts": {
+    "fix": "rm -rf node_modules && rm package-lock.json && npm install",
     "build": "rm -rf dist && tsc -p tsconfig.json",
+    "format": "prettier --write \"**/*.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish:npm": "npm run build",
+    "publish:npm": "npm publish --access public",
+    "prepublish:next": "npm run build",
+    "publish:next": "npm publish --access public --tag next",
+    "prerelease": "npm run build",
     "release": "release-it"
   },
   "repository": {
